# starting-ragchatbot-codebase

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README_QUALITY.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md  view_diagram.html
.claude/: settings.json
.claude/commands/: implement-feature.md
.claude/hooks/: notification.py  post_tool_use.py  pre_tool_use.py  stop.py  subagent_stop.py
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py
frontend/: index.html  script.js  style.css  test-dark-mode.html
scripts/: format.sh  pre-commit.sh  quality.sh
